--- a/templates/museum/museum-category/Graduets.html
+++ b/templates/museum/museum-category/Graduets.html
@@ -11,24 +11,36 @@
         </div>
     </div>
     <section class="container-fluid">
-        {% for el in graduates %}
+         {% for el in graduates %}
             <div class="card-body background-news">
-                <div class="card-title text-center ">
-                    <div class="d-flex justify-content-start pl-3 text-muted text-footer pt-2 pb-3">Дата
-                        публикации: {{ el.date }}</div>
-                    <div class="text-title py-3">{{ el.title }}</div>
+                <div class="card-title text-center">
+                    <div class="d-flex w-100 justify-content-center">
+                        <div class="d-flex w-75 justify-content-start pl-3 text-muted text-footer pt-2 pb-3">Дата
+                            публикации: {{ el.date }}</div>
+                    </div>
+                    <div class="d-flex w-100 justify-content-center">
+                        <div class="text-title w-75 py-3">{{ el.title }}</div>
+                    </div>
                 </div>
-                <div class="row">
-                    <div class="col-6">
-                        <div class="carousel slide d-block w-100" id="_i{{ el.id }}" data-ride="carousel">
+
+                <div class="w-100 d-flex justify-content-center">
+                    <div class="row bg-white w-75 d-flex justify-content-center">
+                        <div class="card-text text-justify px-5">{{ el.text|safe }}</div>
+                    </div>
+                </div>
+                <div class="w-100 d-flex justify-content-center">
+                    <div class="row w-75 bg-white d-flex justify-content-center">
+                        <div class="carousel slide d-block w-75 py-3" id="_i{{ el.id }}" data-ride="carousel">
                             <ol class="carousel-indicators ">
                                 {% for im in el.newimage_set.all %}
                                     {% if forloop.first %}
                                         <li data-target="#_i{{ el.id }}" data-slide-to="{{ forloop.counter0 }}"
                                             class="active bg-warning"></li>
+
                                     {% else %}
                                         <li data-target="#_i{{ el.id }}" data-slide-to="{{ forloop.counter0 }}"
                                             class="bg-warning"></li>
+
                                     {% endif %}
                                 {% endfor %}
                             </ol>
@@ -36,12 +48,12 @@
                                 {% for im in el.newimage_set.all %}
                                     {% if forloop.first %}
                                         <div class="carousel-item active"> {% if im.image %}
-                                            <img class="d-block text-center w-100 h-25" src='{{ im.image.url }}'
+                                            <img class="d-block text-center w-100 " src='{{ im.image.url }}'
                                                  alt="Image">
                                         {% endif %}</div>
                                     {% else %}
                                         <div class="carousel-item"> {% if im.image %}
-                                            <img class="d-block text-center w-100 h-25" src='{{ im.image.url }}'
+                                            <img class="d-block text-center w-100 " src='{{ im.image.url }}'
                                                  alt="Image">
                                         {% endif %}</div>
                                     {% endif %}
@@ -58,19 +70,16 @@
                             </a>
                         </div>
                     </div>
-                    <div class="col-6 shadow bg-white">
-                        <div class="card-text">{{ el.text|safe }}</div>
-                    </div>
                 </div>
+
                 <div class="pt-3">
-                    <div class="d-flex justify-content-end align-items-center ">
-                        <div class="text-footer pr-4">
+                    <div class="d-flex w-100 justify-content-center align-items-center ">
+                        <div class="text-footer w-75 justify-content-end pr-4">
                             Kатегория: {{ el.category }} <i class="fas fa-circle ba"></i>
                         </div>
                     </div>
                 </div>
             </div>
-
         {% endfor %}
         {% include 'include/pagination.html' %}
 
