--- a/templates/museum/museum-category/event.html
+++ b/templates/museum/museum-category/event.html
@@ -4,7 +4,7 @@ Event
 
 {% block content %}
 <div class="clearfix">
-  <a class="btn btn-info left" href="{% url 'calendar' %}"> Calendar </a>
+  <a class="btn btn-info left" href="{% url 'main' %}"> Calendar </a>
 </div>
 
 {% if form.errors %}
