--- a/static/museum/css/paginationbook.css
+++ b/static/museum/css/paginationbook.css
@@ -9,7 +9,7 @@
 }
 
 .pagination,
-.pagination__link {
+.pagination_link {
     display: -ms-flexbox;
     display: flex;
     -ms-flex-flow: row wrap;
@@ -20,7 +20,7 @@
     align-items: center
 }
 
-.pagination__link {
+.pagination_link {
     position: relative;
     left: -1px;
     top: 1px;
@@ -34,18 +34,18 @@
 }
 
 @media only screen and (max-width: 767px) {
-    .pagination__link {
+    .pagination_link {
         font-size: 15px
     }
 }
 
 @media only screen and (min-width: 1025px) {
-    .pagination a.pagination__link:hover {
+    .pagination a.pagination_link:hover {
         background: rgba(102, 88, 175, .15)
     }
 }
 
-.pagination__item {
+.pagination_item {
     transition: all .2s ease-in-out;
     width: 38px;
     height: 38px;
@@ -64,28 +64,28 @@
 }
 
 @media only screen and (max-width: 767px) {
-    .pagination__item {
+    .pagination_item {
         margin: 0 2px;
         width: 33px;
         height: 33px
     }
 }
 
-.pagination__item:first-child {
+.pagination_item:first-child {
     margin-left: 0
 }
 
-.pagination__item:last-child {
+.pagination_item:last-child {
     margin-right: 0
 }
 
 
 
-.pagination__item.active .pagination__link {
+.pagination_item.active .pagination_link {
     color: #F7E4C3;
     background: darkblue;
 }
 
-.pagination__item--dots .pagination__link {
+.pagination_item--dots .pagination_link {
     color: white;
 }
