--- a/templates/include/paginationbook.html
+++ b/templates/include/paginationbook.html
@@ -2,15 +2,15 @@
     <ul class="pagination">
         {% if page.has_previous %}
             {% if page.number|add:'-2' > 1 %}
-                <li class="pagination__item">
-                    <a href="{{ paginator.baseurl }}1">1</a>
+                <li class="pagination_item">
+                    <a href="{{ paginator.baseurl }}1#guest">1</a>
                 </li>
             {% endif %}
             {% if page.number|add:'-2' >= 3 %}
-                <li class="pagination__item pagination__item--dots">
-                    <a href="{{ paginator.baseurl }}{{ page.previous_page_number|add:'-2' }}">
+                <li class="pagination_item pagination_item--dots">
+                    <a href="{{ paginator.baseurl }}{{ page.previous_page_number|add:'-2' }}#guest">
 
-                        <span class="pagination__link">• • •</span>
+                        <span class="pagination_link">• • •</span>
                     </a>
                 </li>
             {% endif %}
@@ -18,28 +18,28 @@
         {% if paginator.page_range|length > 1 %}
             {% for i in paginator.page_range %}
                 {% if i == page.number %}
-                    <li class="pagination__item active">
-                        <a class="pagination__link" href="#">{{ i }}</a>
+                    <li class="pagination_item active">
+                        <a class="pagination_link" href="#guest">{{ i }}</a>
                     </li>
                 {% elif i > page.number|add:'-3' and i < page.number|add:'3' %}
-                    <li class="pagination__item">
-                        <a class="pagination__link" href="{{ paginator.baseurl }}{{ i }}">{{ i }}</a>
+                    <li class="pagination_item">
+                        <a class="pagination_link" href="{{ paginator.baseurl }}{{ i }}#guest">{{ i }}</a>
                     </li>
                 {% endif %}
             {% endfor %}
         {% endif %}
         {% if page.has_next %}
             {% if page.number|add:'3' < page.paginator.num_pages %}
-                <li class="pagination__item pagination__item--dots">
-                    <a href="{{ paginator.baseurl }}{{ page.next_page_number|add:'2' }}">
-                        <span class="pagination__link">• • •</span>
+                <li class="pagination_item pagination_item--dots">
+                    <a href="{{ paginator.baseurl }}{{ page.next_page_number|add:'2' }}#guest">
+                        <span class="pagination_link">• • •</span>
                     </a>
                 </li>
             {% endif %}
             {% if page.number|add:'2' < page.paginator.num_pages %}
-                <li class="pagination__item">
-                    <a class="pagination__link"
-                       href="{{ paginator.baseurl }}{{ page.paginator.num_pages }}">
+                <li class="pagination_item">
+                    <a class="pagination_link"
+                       href="{{ paginator.baseurl }}{{ page.paginator.num_pages }}#guest">
                         {{ page.paginator.num_pages }}
                     </a>
                 </li>
