--- a/templates/museum/reviews.html
+++ b/templates/museum/reviews.html
@@ -10,68 +10,90 @@
             </div>
         </div>
     </div>
-    <section class="container-fluid">
-        <div class="row ">
-            <div class="col-3"></div>
-            <div class="col-9 background-review d-flex justify-content-between">
-                <div class="col">
-                    <p class="text-center mt-5 text-reviews-big">Отзывы</p>
-                    <div class="container w-50 mini-line-1"></div>
-                    <p class="container w-50 mt-3 text-reviews-small">
-                        Здесь вы можете поделиться своими
-                        впечатлениями от посещения музея
-                        или оставить предложение по
-                        улучшению качества услуг
-                    </p>
 
-                </div>
-                <div class="col">
-                    <form action="{% url 'reviews' %}" method="post">
-                        {% csrf_token %}
-                        <div class="form-group editContent">
-                            <div class="col-sm-6 form-group p-0 editContent">
-                                <label for="contactusername" class="editContent">
-                                    Имя *
-                                </label>
-                                <input type="text" class="form-control border" name="name"
-                                       id="contactusername" required="">
+    <div class="container-fluid d-flex justify-content-center">
+        <div class="col-3 background-review">
+            <img class="d-block w-100" src="{% static 'static/museum/img/review.png' %}"
+                 alt="Второй слайд">
+        </div>
+        <div class="col-9 background-review d-flex justify-content-between">
+            <div class="col">
+                <p class="text-center mt-5 pt-5 text-reviews-big">Отзывы</p>
+                <div class="container w-50 mini-line-1"></div>
+                <p class="container w-50 mt-3 text-reviews-small">
+                    Здесь вы можете поделиться своими
+                    впечатлениями от посещения музея
+                    или оставить предложение по
+                    улучшению качества услуг
+                </p>
+
+            </div>
+            <div class="col">
+                <form action="{% url 'reviews' %}" method="post">
+                    {% csrf_token %}
+                    <div class="form-group editContent mt-5">
+                        <div class="col">
+                            <div class="row"><label for="contactusername" class="text-reviews-big pt-3">
+                                Имя *
+                            </label></div>
+                            <div class="row"><input type="text" class="pole-vvoda w-100" name="name"
+                                                    id="contactusername" required="">
                             </div>
-                            <div class="col-sm-6 form-group ml-sm-3 editContent">
-                                <label for="contactemail" class="editContent">
-                                    Email *
-                                </label>
-                                <input type="email" class="form-control border" name="email"
-                                       id="contactemail" required="">
+
+                        </div>
+                        <div class="col">
+                            <div class="row"><label for="contactemail" class="text-reviews-big pt-3">
+                                Email *
+                            </label>
                             </div>
-                            <div>
-                                <label for="contactcomment" class="editContent">
-                                    Ваш комментарий *
-                                </label>
-                                <textarea class="form-control border" rows="5" name="text"
-                                          id="contactcomment" required=""></textarea>
+                            <div class="row"><input type="email" class="pole-vvoda w-100" name="email"
+                                                    id="contactemail" required="">
                             </div>
+                        </div>
+                        <div class="col">
+                            <div class="row"><label for="contactcomment" class="text-reviews-big pt-3">
+                                Ваш комментарий *
+                            </label>
+                            </div>
+                            <div class="row">    <textarea class="pole-vvoda w-100" rows="5" name="text"
+                                                           id="contactcomment" required=""></textarea>
+                            </div>
+                        </div>
+                        <div class="col">
                             <button type="submit"
-                                    class="mt-3 btn btn-success btn-block py-3">
+                                    class="btn-small btn-submit w-100 py-3 mt-3">
                                 Отправить
                             </button>
                         </div>
-                    </form>
-                </div>
+                    </div>
+                </form>
             </div>
         </div>
+    </div>
 
 
-        <div class="bg-warning">
-
-        {% for el in reviews %}
-            <div class="row background-news">
-                <div>{{ el.date_review }}</div>
-                <div>{{ el.name }}</div>
-                <div>{{ el.email }}</div>
-                <div>{{ el.text }}</div>
+    <div class="container-fluid ">
+        <div class="col background-review">
+            <div class="row d-flex justify-content-center text-reviews-big-2">Отзывы Клиентов</div>
+            <div class="d-flex justify-content-center pb-3">
+                <div class="mini-line-review-black w-50"></div>
             </div>
-        {% endfor %}
-        </div>
+            <div class="row py-3 ">
+                {% for el in reviews %}
 
-    </section>
+                    <div class="col-6 text-center py-3 d-flex justify-content-center">
+                        <div class="w-75 ">
+                            <div class="text-reviews-big-1">{{ el.name }}, {{ el.date_review }}</div>
+                            <div class="d-flex justify-content-center pt-2">
+                                <div class="mini-line-review w-100"></div>
+                            </div>
+                            <div class="text-reviews-big-1 pt-2 pl-2">Отзыв: {{ el.text }}</div>
+                        </div>
+                    </div>
+                {% endfor %}
+            </div>
+        </div>
+        {% include 'include/paginationreview.html' %}
+    </div>
+
 {% endblock %}
